restart from scratch once again

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,12 +1,32 @@
-# Domain & general
-DOMAIN=meferraz.42.fr
+#-----------------------------#
+#   WORDPRESS CONFIGURATION   #
+#-----------------------------#
+WP_PATH="/var/www/inception"
+WP_URL="meferraz.42.fr"
+WP_TITLE="Inception"
 
-# Database (only names, no passwords)
-MYSQL_DATABASE=wordpress
-MYSQL_USER=wp_user
+# Admin credentials
+WP_ADMIN_EMAIL="theroot@123.com"
 
-# Wordpress users (admin username must NOT contain 'admin')
-WP_ADMIN_USER=meferraz_owner
-WP_ADMIN_EMAIL=meferraz@student.42porto.pt
-WP_USER=wp_editor
-WP_USER_EMAIL=editor@meferraz.42.fr
+# Regular user credentials
+WP_EMAIL="meferraz@123.com"
+WP_ROLE="subscriber"
+
+#-----------------------------#
+#   NGINX SSL CONFIGURATION   #
+#-----------------------------#
+CERT_FOLDER=/etc/nginx/certs/
+CERTIFICATE=/etc/nginx/certs/certificate.crt
+KEY=/etc/nginx/certs/certificate.key
+
+COUNTRY=PT
+STATE=PT
+LOCALITY=Porto
+ORGANIZATION=42
+UNIT=42
+COMMON_NAME=meferraz.42.fr
+
+#-----------------------------#
+#   DATABASE CONFIGURATION    #
+#-----------------------------#
+DB_HOST=mariadb:3306
