--- a/srcs/requirements/wordpress/conf/www.conf
+++ b/srcs/requirements/wordpress/conf/www.conf
@@ -1,10 +1,14 @@
 [www]
+; PHP-FPM pool configuration for WordPress
+
 user = www-data
 group = www-data
-listen = 0.0.0.0:9000
+
+listen = 9000
 listen.owner = www-data
 listen.group = www-data
 
+; Process management settings
 pm = dynamic
 pm.max_children = 5
 pm.start_servers = 2
