--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,32 +1,19 @@
-user www-data;
-worker_processes auto;
-error_log /var/log/nginx/error.log;
-pid /run/nginx.pid;
+# Nginx main configuration file
 
-events { worker_connections 1024; }
+user www-data;                # Set the user for worker processes
+worker_processes auto;        # Automatically determine the number of worker processes
+
+events {
+	worker_connections 1024;  # Maximum number of simultaneous connections per worker
+}
 
 http {
-include /etc/nginx/mime.types;
-default_type application/octet-stream;
+	include       /etc/nginx/mime.types;         # MIME types mapping
+	default_type  application/octet-stream;      # Default MIME type
 
-server {
-	listen 443 ssl default_server;
-	listen [::]:443 ssl default_server;
+	access_log  /var/log/nginx/access.log;       # Path to access log
+	error_log   /var/log/nginx/error.log;        # Path to error log
 
-	ssl_protocols TLSv1.2 TLSv1.3;
-	ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
-	ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
-
-	root /var/www/html;
-	index index.php index.html index.htm;
-
-	location / {
-	try_files $uri $uri/ =404;
-	}
-
-	location ~ \.php$ {
-	include snippets/fastcgi-php.conf;
-	fastcgi_pass wordpress:9000;
-	}
-}
+	# Load additional configuration files for virtual hosts or other settings
+	include /etc/nginx/conf.d/*.conf;
 }
